--- a/connnect.html
+++ b/connnect.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Dec 28 2021 12:15:40 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 28 2021 15:03:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61cac792bfb7903b645d4307" data-wf-site="61ca6abf115cb92cc3779e1d">
 <head>
   <meta charset="utf-8">
@@ -140,6 +140,14 @@
       </div>
     </div>
   </div>
+  <footer class="wf-section">
+    <div class="container-4 w-container">
+      <a href="#" class="brand w-nav-brand">
+        <h1 class="footerbrandheading">THOMAS <br>GUTIEREZ</h1>
+      </a>
+      <div class="text-block-2">copyright © 2013-2021 all rights reserved</div>
+    </div>
+  </footer>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61ca6abf115cb92cc3779e1d" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
