--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Dec 28 2021 12:15:40 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 28 2021 15:03:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61ca6abf115cb97cb4779e1e" data-wf-site="61ca6abf115cb92cc3779e1d">
 <head>
   <meta charset="utf-8">
@@ -35,7 +35,25 @@
       </div>
     </div>
   </div>
-  <div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo youtube"><iframe src="https://www.youtube.com/embed/tdk9xlUtcc0?rel=0&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></div>
+  <div class="columns w-row">
+    <div class="bustrackcolumn w-col w-col-6">
+      <div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo youtube"><iframe src="https://www.youtube.com/embed/tdk9xlUtcc0?rel=0&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></div>
+    </div>
+    <div class="column w-col w-col-6">
+      <h2 class="heading-5">Hi.</h2>
+      <p class="paragraph-2">This is Thomas Gutierrez. A software developer and designer from Bogotá, Colombia, based in Austin, Texas.<br>Living in the USA since 2015.<br><br>Currently studying the MERN stack at MIT xPro.</p>
+      <a href="https://thomasgutiez.github.io/bustrack/index.html" target="_blank" class="button w-button">SEE MY PORTFOLIO</a>
+      <a href="connnect.html" target="_blank" class="buttonprojectgithub w-button">LET&#x27;S KEEP CONNECTED<strong></strong></a>
+    </div>
+  </div>
+  <footer class="wf-section">
+    <div class="container-4 w-container">
+      <a href="#" class="brand w-nav-brand">
+        <h1 class="footerbrandheading">THOMAS <br>GUTIEREZ</h1>
+      </a>
+      <div class="text-block-2">copyright © 2013-2021 all rights reserved</div>
+    </div>
+  </footer>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61ca6abf115cb92cc3779e1d" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
