--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Dec 28 2021 15:03:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 28 2021 15:09:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61ca6abf115cb97cb4779e1e" data-wf-site="61ca6abf115cb92cc3779e1d">
 <head>
   <meta charset="utf-8">
@@ -42,8 +42,8 @@
     <div class="column w-col w-col-6">
       <h2 class="heading-5">Hi.</h2>
       <p class="paragraph-2">This is Thomas Gutierrez. A software developer and designer from Bogotá, Colombia, based in Austin, Texas.<br>Living in the USA since 2015.<br><br>Currently studying the MERN stack at MIT xPro.</p>
-      <a href="https://thomasgutiez.github.io/bustrack/index.html" target="_blank" class="button w-button">SEE MY PORTFOLIO</a>
-      <a href="connnect.html" target="_blank" class="buttonprojectgithub w-button">LET&#x27;S KEEP CONNECTED<strong></strong></a>
+      <a href="portfolio.html" class="button w-button">SEE MY PORTFOLIO</a>
+      <a href="connnect.html" class="buttonprojectgithub w-button">LET&#x27;S KEEP CONNECTED<strong></strong></a>
     </div>
   </div>
   <footer class="wf-section">
