--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Dec 28 2021 15:09:12 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 28 2021 15:22:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61ca6abf115cb97cb4779e1e" data-wf-site="61ca6abf115cb92cc3779e1d">
 <head>
   <meta charset="utf-8">
@@ -36,10 +36,10 @@
     </div>
   </div>
   <div class="columns w-row">
-    <div class="bustrackcolumn w-col w-col-6">
+    <div class="bustrackcolumn w-col w-col-6 w-col-stack">
       <div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo youtube"><iframe src="https://www.youtube.com/embed/tdk9xlUtcc0?rel=0&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></div>
     </div>
-    <div class="column w-col w-col-6">
+    <div class="column w-col w-col-6 w-col-stack">
       <h2 class="heading-5">Hi.</h2>
       <p class="paragraph-2">This is Thomas Gutierrez. A software developer and designer from Bogotá, Colombia, based in Austin, Texas.<br>Living in the USA since 2015.<br><br>Currently studying the MERN stack at MIT xPro.</p>
       <a href="portfolio.html" class="button w-button">SEE MY PORTFOLIO</a>
