--- a/bustrack.html
+++ b/bustrack.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Dec 28 2021 15:03:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 28 2021 18:09:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61cb1ec020597d7e53a2e495" data-wf-site="61ca6abf115cb92cc3779e1d">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
 <body class="body">
   <div data-animation="over-right" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" data-doc-height="1" role="banner" class="navbar w-nav">
     <div class="container w-container">
-      <a href="#" class="brand w-nav-brand">
+      <a href="index.html" class="brand w-nav-brand">
         <h1 class="heading">THOMAS<br>GUTIEREZ</h1>
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
@@ -35,11 +35,11 @@
       </div>
     </div>
   </div>
-  <div class="columns w-row">
-    <div class="bustrackcolumn w-col w-col-5"></div>
-    <div class="column w-col w-col-7">
+  <div class="portfoliocolumns w-row">
+    <div class="bustrackcolumn w-col w-col-5 w-col-stack"></div>
+    <div class="column w-col w-col-7 w-col-stack">
       <h2 class="heading-5">BUSTRACK</h2>
-      <p class="paragraph-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <p class="paragraph-2">In this simple demo we make the use of API&#x27;s to handle map data and reproduce animations using the integrations of Mapbox.<br>Calling functions triggered by buttons, to animate map pins, to show the stops of of bus route the travel from the MIT Campus to Harvard’s Campus.<br>Very powerful.In future examples we can potentially make use of the map api to display different types of maps using custom styling for different escenarios.</p>
       <a href="https://thomasgutiez.github.io/bustrack/index.html" target="_blank" class="button w-button">DEMO<strong>↗</strong></a>
       <a href="https://github.com/thomasgutiez/bustrack" target="_blank" class="buttonprojectgithub w-button">GITHUB REPOSITORY<strong>↗</strong></a>
     </div>
