--- a/connnect.html
+++ b/connnect.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Dec 28 2021 15:03:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 28 2021 18:09:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61cac792bfb7903b645d4307" data-wf-site="61ca6abf115cb92cc3779e1d">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
 <body class="body">
   <div data-animation="over-right" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" data-doc-height="1" role="banner" class="navbar w-nav">
     <div class="container w-container">
-      <a href="#" class="brand w-nav-brand">
+      <a href="index.html" class="brand w-nav-brand">
         <h1 class="heading">THOMAS<br>GUTIEREZ</h1>
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
@@ -42,6 +42,7 @@
         <h1 class="heading-3">THOMAS GUTIERREZ</h1>
         <h2 class="heading-2">SOFTWARE DEVELOPER AND DESIGNER</h2>
         <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        <p class="paragraph-4">In the intersection where engineering, art and mindful business meet.<br>‍<br>Software developer and project manager from Colombia, bilingual, fluent English and Spanish proficiency, with a background in management and advertisement for digital media, with strength in software applications for business.<br><br>Engineering thinking for problem solutions: Fast, reliable, efficient, smart solutions applied to business.<br><br>Experienced copywriting and redacting scripts for advertisement and professional documents, making use of both English and Spanish languages.Personality drawn to organization, control, and attention to detail.<br></p>
       </div>
     </div>
     <div class="section-2 wf-section">
