--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Dec 28 2021 15:22:39 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 28 2021 18:09:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61ca6abf115cb97cb4779e1e" data-wf-site="61ca6abf115cb92cc3779e1d">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
 <body class="body">
   <div data-animation="over-right" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" data-doc-height="1" role="banner" class="navbar w-nav">
     <div class="container w-container">
-      <a href="#" class="brand w-nav-brand">
+      <a href="index.html" aria-current="page" class="brand w-nav-brand w--current">
         <h1 class="heading">THOMAS<br>GUTIEREZ</h1>
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
@@ -35,13 +35,13 @@
       </div>
     </div>
   </div>
-  <div class="columns w-row">
-    <div class="bustrackcolumn w-col w-col-6 w-col-stack">
-      <div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo youtube"><iframe src="https://www.youtube.com/embed/tdk9xlUtcc0?rel=0&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></div>
+  <div class="biocolumns w-row">
+    <div class="biocolumn w-col w-col-6 w-col-stack">
+      <div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo youtube"><iframe src="https://www.youtube.com/embed/tdk9xlUtcc?rel=0&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></div>
     </div>
     <div class="column w-col w-col-6 w-col-stack">
       <h2 class="heading-5">Hi.</h2>
-      <p class="paragraph-2">This is Thomas Gutierrez. A software developer and designer from Bogotá, Colombia, based in Austin, Texas.<br>Living in the USA since 2015.<br><br>Currently studying the MERN stack at MIT xPro.</p>
+      <p class="paragraph-2">This is Thomas Gutierrez. A software developer and designer from Bogotá, Colombia, based in Austin, Texas. Living in the USA since 2015.<br><br>Currently learning the MERN stack at MIT xPro.<br>Standing in the intersection where engineering, art and mindful business meet.<br></p>
       <a href="portfolio.html" class="button w-button">SEE MY PORTFOLIO</a>
       <a href="connnect.html" class="buttonprojectgithub w-button">LET&#x27;S KEEP CONNECTED<strong></strong></a>
     </div>
