--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Dec 28 2021 15:03:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 28 2021 18:09:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61cac7019a14f68bafe0bf16" data-wf-site="61ca6abf115cb92cc3779e1d">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
 <body class="body">
   <div data-animation="over-right" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" data-doc-height="1" role="banner" class="navbar w-nav">
     <div class="container w-container">
-      <a href="#" class="brand w-nav-brand">
+      <a href="index.html" class="brand w-nav-brand">
         <h1 class="heading">THOMAS<br>GUTIEREZ</h1>
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
